# list-master

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  manifest  pyproject.toml  requirements.txt
.beads/: config.yaml  metadata.json  routes.jsonl
.beads/hooks/: post-checkout
.copilot/commands/: handoff.md
.github/hooks/: gastown.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
app/: config.py  database.py  main.py  settings.py
app/models/: __init__.py  contributor.py  grocery_item.py  inbound_message.py
app/routers/: list.py
app/services/: __init__.py  llm_parser.py
app/templates/: base.html  list.html
app/templates/partials/: item_list.html  item_row.html
gt_onboarding/: README.md  getting-copilot-wired-to-gastown-on-wsl.md  setup.sh  tmux-cheatsheet.md
infra/: main.bicep  main.bicepparam
infra/ansible/: playbook.yml
infra/ansible/inventory/: prod.yml  staging.yml
infra/ansible/roles/deploy/tasks/: main.yml
infra/ansible/roles/healthcheck/tasks/: main.yml
infra/ansible/roles/migrate/tasks/: main.yml
infra/modules/: container-app.bicep  container-registry.bicep  log-analytics.bicep  postgres.bicep
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/environments/: prod.tfvars  staging.tfvars
tests/: test_health.py  test_list.py  test_llm_parser.py
